# game_of_life

./: CMakeLists.txt  Canvas.hpp  Cell.hpp  CellArray.hpp  Display.hpp  GameEngine.cpp  GameEngine.hpp  Loader.hpp  main.cpp
ConwayGame/: CellArray2D.cpp  CellArray2D.hpp  ConwayCell.cpp  ConwayCell.hpp  ConwayLoader.cpp  ConwayLoader.hpp
QtDisplay/: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.hpp
QtGameInterface/: CMakeLists.txt  GameInterface.cpp  GameInterface.hpp
